manifests/minio-s3-storage.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: minio
  namespace: minio-system
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: minio
        volumeMounts:
        - name: data
          mountPath: "/data"
        image: minio/minio:RELEASE.2019-09-05T23-24-38Z
        args:
        - server
        - /data
        ports:
        - containerPort: 9000
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          initialDelaySeconds: 120
          periodSeconds: 20
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 120
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio-system
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio
  namespace: minio-system
spec:
  rules:
    - host: "minio.k3s.kvm"
      http:
        paths:
          - backend:
              serviceName: minio
              servicePort: 9000
